20180809: Fixed status calendar layout issues.

--- a/src/sass/calendar.scss
+++ b/src/sass/calendar.scss
@@ -27,6 +27,10 @@ $dayBase: 30px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+
+    .btn:disabled {
+        opacity: .35;
+    }
   }
 
   .year-nav {
@@ -192,8 +196,8 @@ $dayBase: 30px;
         .month-grid {
             .week-date {
                 min-height: 45px;
-                @media screen and (min-width: $breakpoint-lg) {
-                    min-height: 125px;
+                @media screen and (min-width: $breakpoint-xxl) {
+                    min-height: 115px;
                 }
 
                 &.enabled {
@@ -303,8 +307,9 @@ $dayBase: 30px;
 
                     @media screen and (min-width: $breakpoint-xs) {
                         & [class*="requests-"] {
-                            line-height: .5;
-                            padding: .5em;
+                            font-size: 1rem;
+                            line-height: 1.3;
+                            padding: 0 .5em;
                             text-indent: 0;
                         }
                     }
@@ -329,6 +334,9 @@ $dayBase: 30px;
 }
 
 #calendar-key {
+    @media screen and (max-width: $breakpoint-md) {
+        font-size: .8rem;
+    }
     .requests {
         &-pending {
             background: $warning;
@@ -341,7 +349,16 @@ $dayBase: 30px;
         }
     }
 
-    @media screen and (max-width: $breakpoint-md) {
-        font-size: .7rem;
-    }
+    .badge {
+        font-size: .5rem;
+        line-height: 1;
+
+        &.badge-pill {
+            padding-left: .5em;
+
+            @media screen and (max-width: $breakpoint-md) {
+                padding-right: .4rem;
+            }
+        }
+    }    
 }
