--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -14,6 +14,8 @@ $breakpoint-xs: '575px';
 $breakpoint-md: '768px';
 $breakpoint-lg: '960px';
 $breakpoint-xl: '1140px';
+$breakpoint-xxl: '1350px';
+
 
 body {
     background-color: white;
